add update user grpc method and zero logger
